--- a/MonPremierNotebook.ipynb
+++ b/MonPremierNotebook.ipynb
@@ -2915,8 +2915,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# pusher sur github"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 551,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!git init\n",
+    "\n",
+    "!git add .\n",
+    "!git commit -m \"first upload\"\n",
+    "\n",
+    "# !git remote add origin https://github.com/Luc-Bertin/IPSSI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 560,
    "metadata": {
     "scrolled": true
    },
@@ -2925,12 +2946,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "xcrun: error: invalid active developer path (/Library/Developer/CommandLineTools), missing xcrun at: /Library/Developer/CommandLineTools/usr/bin/xcrun\r\n"
+      "origin\thttps://github.com/Luc-Bertin/IPSSI (fetch)\r\n",
+      "origin\thttps://github.com/Luc-Bertin/IPSSI (push)\r\n"
      ]
     }
    ],
    "source": [
-    "!git status"
+    "!git remote -v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 561,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 6, done.\n",
+      "Counting objects: 100% (6/6), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (6/6), done.\n",
+      "Writing objects: 100% (6/6), 169.12 KiB | 18.79 MiB/s, done.\n",
+      "Total 6 (delta 1), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
+      "To https://github.com/Luc-Bertin/IPSSI\n",
+      " * [new branch]      master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push origin master"
    ]
   }
  ],
