--- a/MonPremierNotebook.ipynb
+++ b/MonPremierNotebook.ipynb
@@ -2923,21 +2923,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 562,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 35ed890] first upload\r\n",
+      " 2 files changed, 174 insertions(+), 4 deletions(-)\r\n"
+     ]
+    }
+   ],
    "source": [
     "#!git init\n",
     "\n",
     "!git add .\n",
     "!git commit -m \"first upload\"\n",
     "\n",
+    "# !git remote -v\n",
     "# !git remote add origin https://github.com/Luc-Bertin/IPSSI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 560,
+   "execution_count": 564,
    "metadata": {
     "scrolled": true
    },
@@ -2946,39 +2956,462 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "origin\thttps://github.com/Luc-Bertin/IPSSI (fetch)\r\n",
-      "origin\thttps://github.com/Luc-Bertin/IPSSI (push)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git remote -v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 561,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enumerating objects: 6, done.\n",
-      "Counting objects: 100% (6/6), done.\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
       "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 169.12 KiB | 18.79 MiB/s, done.\n",
-      "Total 6 (delta 1), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (4/4), 1.10 KiB | 1.10 MiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/Luc-Bertin/IPSSI\n",
-      " * [new branch]      master -> master\n"
+      "   1aac748..35ed890  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# pratiquons un peu ! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 567,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "undico = { \n",
+    "    \"Luc\": \"+33252217\",\n",
+    "    \"Sébastien\": \"+56536573647823\",\n",
+    "    \"Joséphine\": \"+33666101010\",\n",
+    "    \"julien\": \"+3387587875\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Créer un nouveau dico<br> \n",
+    "qui contient uniquement prénoms et numéros<br>\n",
+    "pour les prénoms qui commencent par la lettre<br>\n",
+    "'J' ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 566,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dico2 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 568,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for name, phone in undico.items(): # (nom,tel) \n",
+    "    if name.upper().startswith('J'):\n",
+    "        dico2[name] = phone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 569,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Joséphine': '+33666101010', 'julien': '+3387587875'}"
+      ]
+     },
+     "execution_count": 569,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dico2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## exo2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 570,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Créer une liste<br> \n",
+    "qui contient chaque élement multiplié par 2<br>\n",
+    "pour chaque élément <br>\n",
+    "de la premiere liste <br>\n",
+    "si cet élément est plus grand que 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 582,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste2 = []\n",
+    "for el in liste:\n",
+    "    if el > 3:\n",
+    "        liste2.append(el * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 583,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10]"
+      ]
+     },
+     "execution_count": 583,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 575,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [ cequeveuxobtenir (si, sinon) en itérant sur l'itérable (si condition de filtration)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Créer une liste<br> \n",
+    "qui contient chaque élement multiplié par 2<br>\n",
+    "pour chaque élément <br>\n",
+    "de la premiere liste <br>\n",
+    "si cet élément est plus grand que 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 588,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 10]"
+      ]
+     },
+     "execution_count": 588,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ el*2 for el in liste if el > 3 ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Créer une liste<br> \n",
+    "qui contient chaque élement multiplié par 2<br>\n",
+    "si cet élément est plus grand que 3<br>\n",
+    "sinon /2<br>\n",
+    "pour chaque élément <br>\n",
+    "de la premiere liste <br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 591,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.5, 1.0, 1.5, 8, 10]"
+      ]
+     },
+     "execution_count": 591,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ el*2 if el >3 else el/2 for el in liste]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## dict comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 621,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "undico = { \n",
+    "    \"Luc\": \"+33252217\",\n",
+    "    \"Sébastien\": \"+56536573647823\",\n",
+    "    \"Joséphine\": \"+33666101010\",\n",
+    "    \"julien\": \"+3387587875\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 622,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dico2 = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 623,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for name, phone in undico.items(): # (nom,tel) \n",
+    "    if name.upper().startswith('J'):\n",
+    "        dico2[name] = phone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 624,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Joséphine': '+33666101010', 'julien': '+3387587875'}"
+      ]
+     },
+     "execution_count": 624,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dico2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# { cle (si/sinon):valeur(si/sinon) en itérant sur l'itérable (si condition de filtration)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 605,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dico2 = { name:phone for name, phone in undico.items() if name.upper().startswith('J') }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 606,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Joséphine': '+33666101010', 'julien': '+3387587875'}"
+      ]
+     },
+     "execution_count": 606,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dico2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 604,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'luc': '+33',\n",
+       " 'sébastien': '+56536573647823',\n",
+       " 'joséphine': '+33',\n",
+       " 'JULIEN': '+33'}"
+      ]
+     },
+     "execution_count": 604,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{ (name.upper() if name.startswith('j') else name.lower()  ):\n",
+    "         (phone[:3] if phone.startswith('+33') else phone) \n",
+    "                 for name,phone in undico.items() }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 607,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 607,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 613,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "undico = {1:2,  2: 2, 3:2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 614,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 2, 2: 2, 3: 2}"
+      ]
+     },
+     "execution_count": 614,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "undico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 617,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2: 3}"
+      ]
+     },
+     "execution_count": 617,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{val:cle for cle,val in undico.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 644,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "liste2 = []\n",
+    "for el in liste:\n",
+    "    liste2.append(el)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 645,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 645,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
