--- a/tools - built-ins.ipynb
+++ b/tools - built-ins.ipynb
@@ -314,6 +314,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda x: x*2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
